--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
   },
   "require": {
     "php": "^8.2",
+    "illuminate/cache": "^11.0",
+    "illuminate/config": "^11.0",
+    "illuminate/events": "^11.0",
     "illuminate/translation": "^11.0",
     "illuminate/validation": "^11.0"
   },
@@ -29,10 +32,11 @@
     "overtrue/flysystem-cos": "^5.1",
     "overtrue/flysystem-qiniu": "^3.2",
     "pestphp/pest": "^3.7",
-    "symfony/http-foundation": "^7.2",
-    "symfony/mime": "^7.2",
-    "symfony/translation": "^7.2",
-    "symfony/var-exporter": "^7.2",
+    "symfony/cache": "^7.0",
+    "symfony/http-foundation": "^7.0",
+    "symfony/mime": "^7.0",
+    "symfony/translation": "^7.0",
+    "symfony/var-exporter": "^7.0",
     "workerman/webman-framework": "^1.6"
   },
   "config": {
