--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,18 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\": "tests"
+      "Tests\\": "tests",
+      "app\\": "app",
+      "plugin\\": "plugin",
+      "": "tests/webman"
     }
   },
   "require": {
     "php": "^8.2",
     "illuminate/cache": "^11.0",
     "illuminate/config": "^11.0",
+    "illuminate/console": "^11.0",
+    "illuminate/container": "^11.0",
     "illuminate/events": "^11.0",
     "illuminate/translation": "^11.0",
     "illuminate/validation": "^11.0"
@@ -43,6 +48,7 @@
     "symfony/mime": "^7.0",
     "symfony/translation": "^7.0",
     "symfony/var-exporter": "^7.0",
+    "webman/console": "^1.3",
     "workerman/webman-framework": "^1.6"
   },
   "config": {
