--- a/.gitsplit.yml
+++ b/.gitsplit.yml
@@ -1,6 +1,14 @@
 # https://github.com/jderusse/docker-gitsplit
 cache_url: "cache/gitsplit"
 splits:
+  - prefix: "src/LaravelCache"
+    target: "https://${GH_TOKEN}@github.com/webman-tech/laravel-cache.git"
+  - prefix: "src/LaravelConsole"
+    target: "https://${GH_TOKEN}@github.com/webman-tech/laravel-console.git"
+  - prefix: "src/LaravelFilesystem"
+    target: "https://${GH_TOKEN}@github.com/webman-tech/laravel-filesystem.git"
+  - prefix: "src/LaravelHttpClient"
+    target: "https://${GH_TOKEN}@github.com/webman-tech/laravel-http-client.git"
   - prefix: "src/LaravelTranslation"
     target: "https://${GH_TOKEN}@github.com/webman-tech/laravel-translation.git"
   - prefix: "src/LaravelValidation"
