--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
     "symfony/http-foundation": "^7.0",
     "symfony/mime": "^7.0",
     "symfony/translation": "^7.0",
+    "symfony/var-dumper": "^7.0",
     "symfony/var-exporter": "^7.0",
     "webman/console": "^1.3",
     "workerman/webman-framework": "^1.6"
