feature: laravel-http

--- a/.gitsplit.yml
+++ b/.gitsplit.yml
@@ -7,8 +7,8 @@ splits:
     target: "https://${GH_TOKEN}@github.com/webman-tech/laravel-console.git"
   - prefix: "src/LaravelFilesystem"
     target: "https://${GH_TOKEN}@github.com/webman-tech/laravel-filesystem.git"
-  - prefix: "src/LaravelHttpClient"
-    target: "https://${GH_TOKEN}@github.com/webman-tech/laravel-http-client.git"
+  - prefix: "src/LaravelHttp"
+    target: "https://${GH_TOKEN}@github.com/webman-tech/laravel-http.git"
   - prefix: "src/LaravelTranslation"
     target: "https://${GH_TOKEN}@github.com/webman-tech/laravel-translation.git"
   - prefix: "src/LaravelValidation"
