--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,6 @@
   ],
   "require": {
     "php": "^8.2",
-    "guzzlehttp/guzzle": "^7.8",
     "illuminate/cache": "^11.0",
     "illuminate/config": "^11.0",
     "illuminate/console": "^11.0",
@@ -56,7 +55,7 @@
     "webman-tech/laravel-cache": "self.version",
     "webman-tech/laravel-console": "self.version",
     "webman-tech/laravel-filesystem": "self.version",
-    "webman-tech/laravel-http-client": "self.version",
+    "webman-tech/laravel-http": "self.version",
     "webman-tech/laravel-translation": "self.version",
     "webman-tech/laravel-validation": "self.version"
   },
@@ -88,8 +87,8 @@
   },
   "scripts": {
     "test": "pest --exclude-group=http",
-    "test-http": "pest --group=http",
     "test-all": "pest",
-    "test-coverage": "pest --coverage"
+    "test-coverage": "pest --coverage",
+    "test-http": "pest --group=http"
   }
 }
