--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,7 +36,7 @@ jobs:
           php-version: ${{ matrix.php }}
           coverage: xdebug
           #extensions: 'redis'
-          ini-values: error_reporting=E_ALL
+          #ini-values: error_reporting=E_ALL php8.4 下 nullable is deprecated 暂时未完全解决，因此暂时不启用
           tools: composer:v2
 
       - name: Get composer cache directory
