--- a/.editorconfig
+++ b/.editorconfig
@@ -13,5 +13,9 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
+[*.neon]
+indent_style = tab
+indent_size = 4
+
 [{*.yml,*.json}]
 indent_size = 2
