feature(all): 使用 common-utils 减少部分 webman 的强依赖

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     "illuminate/translation": "^12.0",
     "illuminate/validation": "^12.0",
     "league/flysystem": "^3.0",
+    "webman-tech/common-utils": "^5.0 || dev-main",
     "webman/database": "^2.1",
     "webman/redis": "^2.1"
   },
