--- a/src/LaravelHttp/composer.json
+++ b/src/LaravelHttp/composer.json
@@ -6,7 +6,8 @@
   "require": {
     "php": "^8.2",
     "illuminate/events": "^12.0",
-    "illuminate/http": "^12.0"
+    "illuminate/http": "^12.0",
+    "webman-tech/common-utils": "^5.0 || dev-main"
   },
   "autoload": {
     "psr-4": {
